# tagboat

./: .gitignore  Cargo.toml
tagboat-desktop/: Cargo.toml
tagboat-desktop/src/: main.rs
tagger/: Cargo.toml
tagger-capi/: Cargo.toml
tagger-cli/: Cargo.toml
tagger-cli/src/: main.rs
tagger/migrations/01-create-file-entries/: up.sql
tagger/migrations/02-create-tags/: up.sql
tagger/migrations/03-create-file-tags/: up.sql
tagger/src/: lib.rs
tagger/tests/: database_test.rs
